src/index.css
@import url('https://fonts.googleapis.com/css?family=Cookie|Lato&display=swap');

* {
  box-sizing: border-box;
  margin: 0;
  /*border: 1px solid red;*/
}

:root {
  --amplify-primary-color: salmon;
  --amplify-primary-tint: salmon;
  --amplify-primary-shade: salmon;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
  sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background: #f7f7f7;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
  monospace;
}

button {
  background: inherit;
  color: inherit;
  cursor: pointer;
  border: 1px solid lightgrey;
  margin: 4px;
}

img {
  image-orientation: from-image;
}

a {
  color: white;
  text-decoration: none;
}

*,*:focus,*:hover{
  outline:none;
}

